Fixed message spacing

--- a/src/pages/chat/chat.component.scss
+++ b/src/pages/chat/chat.component.scss
@@ -26,6 +26,10 @@ h3 {
   margin-bottom: 1rem;
 }
 
+tui-island {
+  margin-bottom: 0.5rem;
+}
+
 .footer {
   width: 100%;
   display: flex;
